tests/baselines/reference/extendBaseClassBeforeItsDeclared.errors.txt
tests/cases/compiler/extendBaseClassBeforeItsDeclared.ts(1,23): error TS2686: A class must be declared after its base class.


==== tests/cases/compiler/extendBaseClassBeforeItsDeclared.ts (1 errors) ====
    class derived extends base { }
                          ~~~~
!!! error TS2686: A class must be declared after its base class.
     
    class base { constructor (public n: number) { } }